tests/dataset/tpc-ds/compiler/c/q57.error
/tmp/TestCCompiler_TPCDS_Goldenq573168787169/001/prog.c:241:8: error: conflicting types for ‘abs’; have ‘double(double)’
  241 | double abs(double x) {
      |        ^~~
In file included from /tmp/TestCCompiler_TPCDS_Goldenq573168787169/001/prog.c:3:
/usr/include/stdlib.h:980:12: note: previous declaration of ‘abs’ with type ‘int(int)’
  980 | extern int abs (int __x) __THROW __attribute__ ((__const__)) __wur;
      |            ^~~
/tmp/TestCCompiler_TPCDS_Goldenq573168787169/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq573168787169/001/prog.c:287:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  287 |       result_item_list_t_create(grouped.len * avg_by_year.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq573168787169/001/prog.c:287:7: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq573168787169/001/prog.c:323:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  323 |   test_TPCDS_Q57_simplified_result = result;
      |                                      ^~~~~~
